# PyGeoStudio

./: pyproject.toml
PyGeoStudio/: Analysis.py  Geometry.py  utils.py
examples/analysis/: analysis_basics.py
examples/geometry/: create_region.py  delete_geometry_make_new.py  delete_geometry_read&make_dike.py  geometry_basics.py
examples/sigma_dikes/: PyGeoStudio - Dike Model Builder.ipynb  cross_sections_schelde_quantiles.xlsx  delete_geometry_make_new.py  pgs_dike_modelbuilder.py  pygeostudio-test.py  test original pyGeoStudio.ipynb
